--- a/Resources/Public/Scss/components/_footer.scss
+++ b/Resources/Public/Scss/components/_footer.scss
@@ -162,7 +162,6 @@ $footer-sections: map-merge(
 // Footer Language
 // --------------------------------------------------
 .footer-language {
-    overflow: hidden;
     .language-menu {
         margin: 0;
         list-style: none;
