--- a/Resources/Public/Scss/components/_sociallink.scss
+++ b/Resources/Public/Scss/components/_sociallink.scss
@@ -1,9 +1,6 @@
 //
 // Social Links
 // --------------------------------------------------
-.sociallinks {
-    overflow: hidden;
-}
 .sociallinks-list {
     display: flex;
     flex-wrap: wrap;
